--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -12,7 +12,7 @@ h1 {
   flex-flow: column;
   align-items: center;
   max-width: 1120px;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -44,6 +44,15 @@ h1 {
   text-decoration: none;
 }
 
+.cards__item__content {
+  display: flex;
+  flex-direction: row;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
+}
+
 .cards__item__text {
   align-items: center;
   padding-bottom: 10px;
@@ -58,8 +67,9 @@ h1 {
 .cards__item__pic-wrap {
   position: relative;
   width: 100%;
-  padding-top: 67%;
   overflow: hidden;
+  max-width: 100%;
+  height: auto;
 }
 
 .fade-img {
@@ -79,7 +89,7 @@ h1 {
   max-width: 100%;
   height: 100%;
   max-height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: all 0.2s linear;
 }
 
