--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -26,6 +26,7 @@
     text-align: left;
     width: 160px;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .footer-link-items h2 {
