--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -27,6 +27,7 @@
   font-size: 2rem;
   display: flex;
   align-items: center;
+  font-family: 'Oswald', sans-serif
 }
 
 .fa-typo3 {
@@ -51,6 +52,7 @@
 
 .nav-item {
   height: 80px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .nav-links {
