--- a/src/components/AboutSection.css
+++ b/src/components/AboutSection.css
@@ -1,48 +1,54 @@
-.slider {
-    position: relative;
-    height: 100vh;
+.about-section-container {
     display: flex;
-    justify-content: left;
-    align-items: center;
-    max-width: 70%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.profile-content {
+    flex: 1;
+    padding: 20px;
+    margin-right: 15px;
+}
+
+.profile-images {
+    max-width: 500px;
     width: 100%;
-    margin: 50px 0 45px;
-}
-
-.image {
-    display: flex;
-    width: 1000px;
     height: auto;
-    border-radius: 10px;
+    margin: 0 auto;
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
 
+
+.images {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.left-arrow,
 .right-arrow {
-    position: absolute;
-    top: 50%;
-    font-size: 3rem;
-    right: 32px;
-    z-index: 10;
-    cursor: pointer;
-    user-select: none;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 1rem;
+  cursor: pointer;
+  z-index: 1;
+  transition: transform 0.3s ease;
+}
+
+.left-arrow:hover,
+.right-arrow:hover {
+    transform: translateY(-50%) scale(1.5);
 }
 
 .left-arrow {
-    position: absolute;
-    top: 50%;
-    font-size: 3rem;
-    left: 32px;
-    z-index: 10;
-    cursor: pointer;
-    user-select: none;
+  left: 0;
+  transform-origin: right center;
 }
 
-.slide {
-    opacity: 0;
-    transition-duration: 1s ease;
-}
-
-.slide.active {
-    opacity: 1;
-    transition-duration: 1s;
-    transform: scale(1.08);
+.right-arrow {
+  right: 0;
+  transform-origin: left center;
 }
