--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -59,6 +59,11 @@ h1 {
   color: #252e48;
   font-size: 24px;
   line-height: 24px;
+  font-family: 'Lato', sans-serif;
+}
+
+.project__title {
+  font-family: 'Lato', sans-serif;
 }
 
 .cards__item__description {
@@ -66,6 +71,7 @@ h1 {
   align-self: left;
   color: #242424;
   font-size: 18px;
+  font-family: 'Lato', sans-serif;
 }
 
 .cards__item__pic-wrap {
