--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -26,7 +26,7 @@
     text-align: left;
     width: 160px;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .footer-link-items h2 {
@@ -65,6 +65,7 @@
     width: 90%;
     max-width: 1000px;
     margin: 15px auto 0 auto;
+    font-family: 'Lato', sans-serif;
 }
 
 .social-icons {
