--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -52,7 +52,7 @@
 
 .nav-item {
   height: 80px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .nav-links {
@@ -79,6 +79,10 @@
 
 .menu-icon {
   display: none;
+}
+
+.custom-font {
+  font-family: 'Lato', sans-serif;
 }
 
 @media screen and (max-width: 960px) {
