--- a/src/components/AboutSection.css
+++ b/src/components/AboutSection.css
@@ -13,6 +13,20 @@
     width: 40%;
 }
 
+.resume__button {
+    height: 30px;
+    border-radius: 5px;
+    background-color: #ef9177;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+}
+
+.btn {
+    position: right;
+}
+
 .profile-content {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
@@ -90,7 +104,7 @@
     }
     .profile-images {
         width: fit-content;
-        margin: 50px 100px 5px;
+        margin: 5% 10% 10px;
         max-width: fit-content;
     }
     .row .column {
